@@ -14,6 +14,8 @@ Version 1.4-1, September 28, 2011
       allowing full control of JAGS settings on workers.
     * dcdiag and dctable: return NA when subroutines fail
       (gelman.diag, lambdamax.diag, chisq.diag).
+      dc.fit and dc.parfit neglects these NA values
+      when issueing warning based on Rhat.
 
 Version 1.4-0, September 28, 2011
     * Major CRAN release with new parallel features.
